packages/next-swc/crates/core/tests/errors/next-font-loaders/arg-not-object/output.js
import s from "@next/font/google?Sacramento;{}";
import s from "@next/font/google?Sacramento;{}";
const obj = {};
